option('NOSHM', description: 'Disabled shared memory (falling back to shared temporary files)', type : 'boolean', value : false)
option('GEOIP', description: 'Enable GeoIP capabilities (deprecated)', type : 'boolean', value : false)
option('NOSSL', description: 'Disable SSL/TLS support', type : 'boolean', value : false)
option('NOUPDATE', description: 'Disable the updater', type : 'boolean', value : false)
option('PERPETUAL', description: 'Disable the licensing system', type : 'boolean', value : false)
option('NOAUTH', description: 'Disable API authentication entirely (insecure!)', type : 'boolean', value : false)
option('KILLONEXIT', description: 'Kill all processes on exit, ensuring nothing is running anymore (disables rolling restart/update support)', type : 'boolean', value : false)
option('WITH_THREADNAMES', description: 'Enable fancy names for threads (not supported on all platforms)', type : 'boolean', value : false)
option('NOCRASHCHECK', description: 'Disables the crash check in the controller stats and input userpages. Prevents killing processes that are stalled/stuck.', type : 'boolean', value : false)
option('NOLLHLS', description: 'Disable LLHLS', type : 'boolean', value : false)
option('FILLER_DATA', type: 'string', value: 'DEFAULT')
option('SHARED_SECRET', type: 'string', value: 'DEFAULT')
option('SUPER_SECRET', type: 'string', value: 'DEFAULT')
option('UDP_API_HOST', type: 'string', value: 'localhost')
option('UDP_API_PORT', type: 'integer', value: 4242)
option('DISKSERIAL', description: 'Lock application to given disk serial number', type: 'string', value: 'DEFAULT')
option('STATS_DELAY', type: 'integer', value: 15)
option('APPNAME', description: 'Name of the application', type: 'string', value: 'MistServer')
option('DATASIZE', type: 'integer', value: 40)
option('STAT_CUTOFF', type: 'integer', value: 600)
option('NORIST', description: 'Disable building RIST support, regardless of library being present (by default RIST is enabled if libraries are installed)', type : 'boolean', value : false)
option('NOSRT', description: 'Disable building SRT support, regardless of library being present (by default SRT is enabled if libraries are installed)', type : 'boolean', value : false)
option('RELEASE', type: 'string', value: 'DEFAULT')
option('DEBUG', type: 'integer', value: 4)
option('NOGA', description: 'Disables Google Analytics entirely in the LSP', type: 'boolean', value: false)
option('LOAD_BALANCE', description: 'Build the load balancer', type: 'boolean', value: false)
option('WITH_AV', description: 'Build a generic libav-based input (not distributable!)', type: 'boolean', value: false)
option('WITH_JPG', description: 'Build JPG thumbnailer output support', type: 'boolean', value: false)
option('WITH_SANITY', description: 'Enable MistOutSanityCheck output for testing purposes', type: 'boolean', value: false)