option('NOSHM', description: 'Disabled shared memory (falling back to shared temporary files)', type : 'boolean', value : false)
option('NOSSL', description: 'Disable SSL/TLS support', type : 'boolean', value : false)
option('NOUSRSCTP', description: 'Disable usrsctp (WebRTC data channels) support', type : 'boolean', value : false)
option('NOUPDATE', description: 'Disable the updater', type : 'boolean', value : false)
option('NOAUTH', description: 'Disable API authentication entirely (insecure!)', type : 'boolean', value : false)
option('WITH_THREADNAMES', description: 'Enable fancy names for threads (not supported on all platforms)', type : 'boolean', value : false)
option('NOLLHLS', description: 'Disable LLHLS support (falling back to plain HLS)', type : 'boolean', value : false)
option('FILLER_DATA', description: 'Data used to as filler data in various protocols that use/need it', type: 'string', value: 'DEFAULT')
option('SHARED_SECRET', description: '"Secret" string used to ask for customer-specific binaries from the update server', type: 'string', value: 'DEFAULT')
option('UDP_API_HOST', description: 'Hostname the internal UDP API listens on', type: 'string', value: 'localhost')
option('UDP_API_PORT', description: 'Port the internal UDP API listens on', type: 'integer', value: 4242)
option('DISKSERIAL', description: 'Lock application to given disk serial number', type: 'string', value: 'DEFAULT')
option('STATS_DELAY', description: 'Delay to apply to statistics, used to consistently handle segmented protocols', type: 'integer', value: 15)
option('APPNAME', description: 'Name of the application', type: 'string', value: 'MistServer')
option('DATASIZE', description: 'Size in mebibytes for live stream data pages', type: 'integer', value: 40)
option('STAT_CUTOFF', description: 'Time in seconds that statistics history is kept in memory for', type: 'integer', value: 600)
option('NORIST', description: 'Disable building RIST support, regardless of library being present (by default RIST is enabled if libraries are installed)', type : 'boolean', value : false)
option('NOSRT', description: 'Disable building SRT support, regardless of library being present (by default SRT is enabled if libraries are installed)', type : 'boolean', value : false)
option('RELEASE', description: 'Release string used in the reported version information', type: 'string', value: 'DEFAULT')
option('VERSION', description: 'Version string used in the reported version information', type: 'string', value: 'Unknown')
option('DEBUG', description: 'Default debug level. Recommended value for development is 4, recommended value for production is 3', type: 'integer', value: 4)
option('NOGA', description: 'Disables Google Analytics entirely in the LSP', type: 'boolean', value: false)
option('LOAD_BALANCE', description: 'Build the load balancer (WIP)', type: 'boolean', value: false)
option('WITH_AV', description: 'Build a generic libav-based input (not distributable!)', type: 'boolean', value: false)
option('WITH_SANITY', description: 'Enable MistOutSanityCheck output for testing purposes', type: 'boolean', value: false)
option('LSP_MINIFY', description: 'Try to minify LSP JS via java closure-compiler, generally not needed unless changing JS code as a minified version is part of the repository already', type: 'boolean', value: false)
option('LOCAL_GENERATORS', description: 'Attempts to find a locally-installed version of sourcery and make_html, instead of compiling it', type: 'boolean', value: false)
option('DOCKERRUN', description: 'Enables the controller to execute a command that is passed as the first parameter to pass official Docker image requirements', type: 'boolean', value: false)

