add_library ( mist SHARED
  amf.cpp
  amf.h
  auth.cpp
  auth.h
  base64.cpp
  base64.h
  bitfields.cpp
  bitfields.h
  bitstream.cpp
  bitstream.h
  checksum.h
  CMakeLists.txt
  config.cpp
  config.h
  converter.cpp
  converter.h
  defines.h
  dtsc.cpp
  dtsc.h
  dtscmeta.cpp
  filesystem.cpp
  filesystem.h
  flv_tag.cpp
  flv_tag.h
  ftp.cpp
  ftp.h
  http_parser.cpp
  http_parser.h
  json.cpp
  json.h
  mp4_adobe.cpp
  mp4_adobe.h
  mp4.cpp
  mp4_generic.cpp
  mp4_generic.h
  mp4.h
  mp4_ms.cpp
  mp4_ms.h
  nal.cpp
  nal.h
  ogg.cpp
  ogg.h
  procs.cpp
  procs.h
  rtmpchunks.cpp
  rtmpchunks.h
  shared_memory.cpp
  shared_memory.h
  socket.cpp
  socket.h
  stream.cpp
  stream.h
  theora.cpp
  theora.h
  timing.cpp
  timing.h
  tinythread.cpp
  tinythread.h
  ts_packet.cpp
  ts_packet.h
  vorbis.cpp
  vorbis.h
)

target_link_libraries( mist
  -lpthread
  -lrt
)
