lib_LTLIBRARIES=libmist-1.0.la
libmist_1_0_la_SOURCES=amf.h amf.cpp 
libmist_1_0_la_SOURCES+=auth.h auth.cpp 
libmist_1_0_la_SOURCES+=base64.h base64.cpp 
libmist_1_0_la_SOURCES+=config.h config.cpp 
libmist_1_0_la_SOURCES+=dtsc.h dtsc.cpp dtscmeta.cpp 
libmist_1_0_la_SOURCES+=flv_tag.h flv_tag.cpp 
libmist_1_0_la_SOURCES+=http_parser.h http_parser.cpp 
libmist_1_0_la_SOURCES+=json.h json.cpp 
libmist_1_0_la_SOURCES+=procs.h procs.cpp 
libmist_1_0_la_SOURCES+=rtmpchunks.h rtmpchunks.cpp 
libmist_1_0_la_SOURCES+=socket.h socket.cpp 
libmist_1_0_la_SOURCES+=mp4.h mp4.cpp mp4_conv.cpp
libmist_1_0_la_SOURCES+=ftp.h ftp.cpp 
libmist_1_0_la_SOURCES+=filesystem.h filesystem.cpp 
libmist_1_0_la_SOURCES+=stream.h stream.cpp 
libmist_1_0_la_SOURCES+=timing.h timing.cpp 
libmist_1_0_la_SOURCES+=ts_packet.cpp ts_packet.h 
libmist_1_0_la_SOURCES+=converter.cpp converter.h 
libmist_1_0_la_SOURCES+=ogg.h ogg.cpp 
libmist_1_0_la_SOURCES+=theora.cpp theora.h 
libmist_1_0_la_SOURCES+=vorbis.cpp vorbis.h
libmist_1_0_la_LDFLAGS = -version-info 5:1:2
libmist_1_0_la_CPPFLAGS=$(DEPS_CFLAGS) $(global_CFLAGS)
libmist_1_0_la_LIBADD=$(DEPS_LIBS) $(CLOCK_LIB)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = mist-1.0.pc

library_includedir=$(includedir)/mist-1.0/mist
library_include_HEADERS = amf.h 
library_include_HEADERS +=auth.h 
library_include_HEADERS +=base64.h 
library_include_HEADERS +=config.h 
library_include_HEADERS +=dtsc.h 
library_include_HEADERS +=flv_tag.h 
library_include_HEADERS +=http_parser.h 
library_include_HEADERS +=json.h 
library_include_HEADERS +=procs.h 
library_include_HEADERS +=rtmpchunks.h 
library_include_HEADERS +=socket.h 
library_include_HEADERS +=mp4.h 
library_include_HEADERS +=ftp.h 
library_include_HEADERS +=filesystem.h 
library_include_HEADERS +=stream.h 
library_include_HEADERS +=timing.h 
library_include_HEADERS +=nal.h 
library_include_HEADERS +=ts_packet.h 
library_include_HEADERS +=converter.h 
library_include_HEADERS +=ogg.h 
library_include_HEADERS +=theora.h 
library_include_HEADERS +=vorbis.h
